--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/mainFragment"
-        android:icon="@drawable/ic_home"
-        android:title="@string/mainPage"></item>
+        android:id="@+id/toWatchList"
+        android:icon="@drawable/ic_to_watch"
+        android:title="@string/toWatch"></item>
     <item
-        android:id="@+id/favouriteList"
-        android:icon="@drawable/ic_list"
-        android:title="@string/myList"></item>
+        android:id="@+id/watchedList"
+        android:icon="@drawable/ic_watched"
+        android:title="@string/watched"></item>
 </menu>
