--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="64dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:hint="@string/registerText"
+        android:hint="@string/emailText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerText">
@@ -49,6 +49,7 @@
         android:ems="10"
         android:inputType="textPassword"
         android:hint="@string/passwordText"
+        app:passwordToggleEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerEmail">
@@ -70,6 +71,7 @@
         android:ems="10"
         android:inputType="textPassword"
         android:hint="@string/passwordRepeatText"
+        app:passwordToggleEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerPassword">
