--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.shameapp.View.MainFragment"
-        android:label="MainFragment"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_searchResultsFragment"
@@ -20,7 +20,7 @@
     <fragment
         android:id="@+id/searchResultsFragment"
         android:name="com.example.shameapp.View.SearchResultsFragment"
-        android:label="SearchResultsFragment"
+        android:label="@string/search"
         tools:layout="@layout/fragment_search_results">
         <argument
             android:name="searchQuery"
@@ -38,7 +38,7 @@
     <fragment
         android:id="@+id/movieView"
         android:name="com.example.shameapp.View.MovieView"
-        android:label="MovieView"
+        android:label="{title}"
         tools:layout="@layout/fragment_movie_view">
         <action
             android:id="@+id/action_movieView_to_personFragment"
@@ -56,7 +56,7 @@
     <fragment
         android:id="@+id/personFragment"
         android:name="com.example.shameapp.View.PersonFragment"
-        android:label="PersonFragment"
+        android:label="{name}"
         tools:layout="@layout/fragment_person_view">
         <action
             android:id="@+id/action_personFragment_to_movieView"
